--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,11 +3,11 @@
 
     <!-- Jumbotron -->
     <section class="hero-image">
-        <div class="text-white text-center py-5 px-4">
+        <div class="text-white text-center py-5">
             <div class="py-5">
         
                 <!-- Content -->
-                <h2 class="card-title h2 my-4 py-2">We're getting married!</h2>
+                <h1 id="hero-card-title" class="card-title my-4 py-2">We're getting married!</h1>
                 <p class="mb-4 pb-2 px-md-5 mx-md-5">
                     And we'd love you to be a part of it.
                 </p>
