--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">{{ username }}</h3>
 
     <div class="row card-panel">
-        <form action="{{ url_for('search') }}" method="post" class="col s12">
+        <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row center-align">
                 <div class="input-field col">
                     <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
