--- a/templates/components/forms/authentication-form.html
+++ b/templates/components/forms/authentication-form.html
@@ -4,7 +4,7 @@
     <form action="{{ url_for('login') }}" method="POST">
     {% endif %}
         <div class="row">
-            <div class="col-md-8 mx-auto border border-light p-5">
+            <div class="col-md-8 mx-auto p-5">
                 <p class="h4 mb-4 text-center">
                     {% if register == True %} Register to RSVP {% else %} Sign In {% endif %}
                 </p>
