--- a/templates/components/forms/guest-details-form.html
+++ b/templates/components/forms/guest-details-form.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 {% if add == True %}
-    <form class="border border-light p-5" action="{{ url_for('add_guest', user_id=user_id ) }}" method="POST" > 
+    <form class="p-5" action="{{ url_for('add_guest', user_id=user_id ) }}" method="POST" > 
 {% else %}
-    <form class="border border-light p-5" action="{{ url_for('edit_guest', guest_id=guest_id, user_id=user_id) }}" method="POST"> 
+    <form class="p-5" action="{{ url_for('edit_guest', guest_id=guest_id, user_id=user_id) }}" method="POST"> 
 {% endif %}
     <div class="row">
-        <div class="col-md-8 mx-auto border border-light p-5">
+        <div class="col-md-8 mx-auto p-5">
             <p class="h3 mb-4 text-center">
                 {% if add == True %} Add Guest {% else %} Edit Guest {% endif %}
             </p>
