--- a/templates/pages/search-results.html
+++ b/templates/pages/search-results.html
@@ -1,42 +1,22 @@
 {% extends "layout/base.html" %}
 {% block content %}
 
-<h3 class="center-align">{{ username }}</h3>
+<h3 class="center-align">Search Results</h3>
 
-    <div class="row card-panel">
-        <form action="{{ url_for('search') }}" method="POST" class="col s12">
-            <div class="row center-align">
-                <div class="input-field col">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" placeholder="Search guests" required>
-                </div>
-                <div class="col">
-                    <button type="submit" class="light-blue darken-1 btn text-shadow">
-                        Search for Guest
-                    </button>
-                    <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" class="btn btn-warning"
-                    aria-label="Add Guest">Add Guest</a>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    {% if count_guests == 0 %}
+    {% if search_results == 0 %}
     <div class="container">
         {% include 'components/messages/messages.html' %}
         <div class="row">
             <div class="col-12">
                 <div class="card center-align text-dark">
                     <div class="card-body">
-                        <h3 class="card-title p-3">No Guests</h3>
+                        <h3 class="card-title p-3">No Results</h3>
                         <p>
-                            You haven't added any guests. Add a guest to confirm their attendance and submit your RSVP.
+                            You have no guests by that name.
                         </p>
-                        <p>
-                            After you have added a guest, come here to view/edit your RSVP.
-                        </p>
-                        <button class="btn"> <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest"
-                                aria-label="Add Guest">Add Guest</a></button>
+                        <a href="{{ url_for('dashboard', user_id=session['user_id']) }}" class="red btn text-shadow">Reset</a>
+                        <!-- <button class="btn"> <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest"
+                                aria-label="Add Guest">Add Guest</a></button> -->
                     </div>
                 </div>
             </div>
@@ -45,10 +25,8 @@
 
     {% else %}
     <div class="container">
-        {% include 'components/messages/messages.html' %}
-        
         <div class="row d-flex justify-content-center">
-            <form action="{{ url_for('dashboard', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
+            <form action="{{ url_for('search', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
                 <div class="col text-dark" id="">
                     {% if count_guests >= 1 %}
                         {% for guest in guests %}
