--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -8,14 +8,16 @@
             <div class="row center-align">
                 <div class="input-field col">
                     <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" placeholder="Search guests" required>
+                    <input type="text" name="query" id="query" minlength="2" class="validate" placeholder="Search guest by name" required>
                 </div>
                 <div class="col">
                     <button type="submit" class="light-blue darken-1 btn text-shadow">
                         Search for Guest
                     </button>
-                    <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" class="btn btn-warning"
-                    aria-label="Add Guest">Add Guest</a>
+                    <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" aria-label="Add Guest"
+                    class="btn btn-warning">Add Guest</a>
+                    <a href="{{ url_for('dashboard', user_id=session['user_id']) }}" title="View All Guests" aria-label="View All Guests"
+                    class="red btn text-shadow">View All Guests</a>
                 </div>
             </div>
         </form>
@@ -24,24 +26,21 @@
     {% if count_guests == 0 %}
     <div class="container">
         {% include 'components/messages/messages.html' %}
-        <div class="row">
-            <div class="col-12">
-                <div class="card center-align text-dark">
-                    <div class="card-body">
-                        <h3 class="card-title p-3">No Guests</h3>
-                        <p>
-                            You haven't added any guests. Add a guest to confirm their attendance and submit your RSVP.
-                        </p>
-                        <p>
-                            After you have added a guest, come here to view/edit your RSVP.
-                        </p>
-                        <button class="btn"> <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest"
-                                aria-label="Add Guest">Add Guest</a></button>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card center-align text-dark">
+                        <div class="card-body">
+                            <h3 class="card-title p-3">No Results</h3>
+                            <p>
+                                You have no guests by that name.
+                            </p>
+                            <a href="{{ url_for('dashboard', user_id=session['user_id']) }}" class="red btn text-shadow">Return to dashboard</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
     {% else %}
     <div class="container">
