--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,7 @@ body {
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   background-color: rgba(0,73,73,0.5);
+  z-index: 1;
 }
 
 #demo-dropdown {
@@ -103,7 +104,11 @@ body {
   position: relative;
 
   margin-top: -5rem;
-  z-index: -1;
+  z-index: -1; 
+}
+
+#hero-card {
+ z-index: 0;
 }
 
 #hero-card-title {
