--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -50,7 +50,8 @@
         </div>
         <div class="row center-align">
             <div class="col-12">
-                <a id="dates-more-info-button" class="btn peach-gradient">More info</a>
+                <a id="dates-more-info-button" class="btn peach-gradient" href="#dates-more-info" data-toggle="modal" data-target="#dates-more-info" title="More info dates">More info</a>
+                {% include 'components/modals/dates-more-info.html' %}
             </div>
         </div>
     </section>
