--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,6 @@ i {
   margin: 1rem;
 }
 
-
 /* Block dividers */
 
 .divider {
@@ -170,6 +169,9 @@ i {
   font-size: 1rem;
 }
 
+#query{
+  width: -webkit-fill-available;
+}
 
 /* Authentication */
 
