--- a/templates/components/inputs-and-buttons/dashboard-controls.html
+++ b/templates/components/inputs-and-buttons/dashboard-controls.html
@@ -1,18 +1,17 @@
 <div class="row card-panel">
     <form action="{{ url_for('search') }}" method="POST" class="col s12">
-        <div class="row center-align">
-            <div class="input-field col">
-                <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+        <div class="row d-block center-align">
+            <div class="col">
                 <input type="text" name="query" id="query" minlength="2" class="validate" placeholder="Search guest by name" required>
             </div>
             <div class="col">
-                <button type="submit" class="light-blue darken-1 btn text-shadow">
+                <button type="submit" class="btn btn-info btn-sm">
                     Search for Guest
                 </button>
                 <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" aria-label="Add Guest"
-                class="btn btn-warning">Add Guest</a>
+                class="btn btn-sm btn-warning">Add Guest</a>
                 <a href="{{ url_for('dashboard', user_id=session['user_id']) }}" title="View All Guests" aria-label="View All Guests"
-                class="red btn text-shadow">View All Guests</a>
+                 class="btn btn-default btn-sm">View All Guests</a>
             </div>
         </div>
     </form>
