Add padding to dashboard header

--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 {% block content %}
 
-<h3 class="center-align">{{ username }}'s Profile</h3>
+<h3 class="center-align p-3">{{ username }}'s Profile</h3>
 
     {% include 'components/messages/messages.html' %}
     {% include "components/inputs-and-buttons/dashboard-controls.html" %}
