--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,7 +85,6 @@ body {
   margin: 0;
 }
 
-
 /* Jumbotron & Hero */
 
 .hero-image {
@@ -115,7 +114,6 @@ body {
   font-family: Pacifico;
 }
 
-
 /* Links and Headers */
 
 .back-to-top {
@@ -125,7 +123,6 @@ body {
 #wedding-party-header {
   padding: 2rem;
 }
-
 
 /* Buttons & Icons */
 
@@ -149,7 +146,6 @@ i {
   margin-bottom: 3rem;
 }
 
-
 /* Flashed messages */
 
 .flashes {
@@ -162,7 +158,6 @@ i {
   color: #000;
   background-color: #009688;
 }
-
 
 /* Dashboard */
 
@@ -188,8 +183,7 @@ i {
   font-size: .8rem;
 }
 
-
-/* Wedding Party */
+/* Wedding Party Page */
 
 .wedding-party-col {
   text-align: center;
