--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -1,20 +1,18 @@
-<footer class="page-footer font-small teal pt-4">
-    <div class="container-fluid text-center text-md-left">
-      <div class="row text-center">
-        <div class="col-md-12 mt-md-0">
+<footer class="page-footer font-small teal pt-3">
+  <div class="row text-center">
+        <div class="col-md-12">
             <h5 class="font-weight-bold ">Need to get in touch?</h5>
         </div>
-        <div class="col-md-6 mt-md-0 mt-3">
+        <div class="col-md-6">
             <p>
-              <i class="fas fa-phone"></i> +44 (0)1234 56789
+              <i class="footer-icon fas fa-phone"></i> +44 (0)1234 56789
             </p>
         </div>
-        <hr class="clearfix w-100 d-md-none pb-3">
-        <div class="col-md-6 mb-md-0 mb-3">
+        <div class="col-md-6">
           <p>
-            <i class="fas fa-envelope"></i> bizandchris@wedding.com
+            <i class="footer-icon fas fa-envelope"></i> bizandchris@wedding.com
           </p>
         </div>
       </div>
-    </div>
+
   </footer>
