--- a/templates/components/inputs-and-buttons/dashboard-controls.html
+++ b/templates/components/inputs-and-buttons/dashboard-controls.html
@@ -1,4 +1,4 @@
-<div class="row card-panel">
+<div class="row card-panel p-3">
     <form action="{{ url_for('search') }}" method="POST" class="col s12">
         <div class="row d-block center-align">
             <div class="col">
