--- a/templates/components/forms/guest-details-form.html
+++ b/templates/components/forms/guest-details-form.html
@@ -100,9 +100,9 @@
                     {% endif %}
             </select>
             <div class="col d-flex justify-content-center">
-                <button id="guest-details-go-back-button" name="guest-details-go-back-button" class="btn btn-default guest-details-button" href="{{ url_for('dashboard', user_id=user_id) }}">
+                <a href="{{ url_for('dashboard', user_id=user_id) }}" type="submit" class="btn btn-default">
                     Go Back
-                </button>
+                </a>
                 <button id="guest-details-confirm-button" name="guest-details-confirm-button" class="btn btn-info guest-details-button" type="submit">
                     {% if add == True %} 
                         Add Guest
