--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -33,7 +33,7 @@
                         aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-user"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-default"
+                    <div id="user-dropdown-menu" class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
                         <a class="dropdown-item disabled profile-name">{{ user.username }}'s Profile</a>
                         <a class="dropdown-item" href="{{ url_for('dashboard', user_id=session['user_id']) }}">View
