Add modal header

--- a/templates/components/modals/dates-more-info.html
+++ b/templates/components/modals/dates-more-info.html
@@ -2,6 +2,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content info-modal">
       <div class="modal-header">
+        <h4>Further information</h3>
         <button id="more-info-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -29,4 +30,3 @@
     </div>
   </div>
 </div>
-</form>
