Remove error message template text

--- a/templates/pages/error.html
+++ b/templates/pages/error.html
@@ -6,7 +6,7 @@
         <div class="col s6">
             <h2>Oops! Something went wrong!</h2>
             <img id="grumpy-bizzy" src="../static/images/grumpy-bizzy.jpeg" alt="grumpy bizzy">
-            <p> Error message would appear here{{ error_message }} </p>
+            <p>{{ error_message }}</p>
             <a href="{{ url_for('home') }}">Click here to go back to the home page</a>
         </div>
     </div>
