Remove dashboard controls from search results page

--- a/templates/pages/search-results.html
+++ b/templates/pages/search-results.html
@@ -2,11 +2,10 @@
 {% block content %}
 
     {% include 'components/messages/messages.html' %}
-    {% include "components/inputs-and-buttons/dashboard-controls.html" %}
 
     <div class="dashboard-container">   
         <div class="dashboard-content">
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center p-3">
                 <div class="col-12">
                     <div class="card center-align text-dark">
                         <div class="card-body">
