--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,7 +244,7 @@ i {
 @media only screen and (max-width: 600px) {
   .hero-image {
     height: 90vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url(../images/us.jpg) no-repeat left fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url(../images/cropped-us.jpeg) no-repeat center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
