Rename wedding party function

--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/#info-section">Info</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wedding_party') }}">Wedding Party</a>
+                    <a class="nav-link" href="{{ url_for('wedding_party_list') }}">Wedding Party</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a id="demo-dropdown" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333"
