Change auth form text

--- a/templates/components/forms/authentication-form.html
+++ b/templates/components/forms/authentication-form.html
@@ -40,7 +40,7 @@
                         </p>
                     {% else %}
                         <p>
-                            Not got an account yet? <strong><a href="{{ url_for('register') }}">RSVP</a></strong> to create one.
+                            Not got an account yet? <strong><a href="{{ url_for('register') }}">Register</a></strong> to RSVP.
                         </p>
                     {% endif %}
                     <div class="col s12 link-container">
