--- a/templates/components/forms/guest-details-form.html
+++ b/templates/components/forms/guest-details-form.html
@@ -100,10 +100,10 @@
                     {% endif %}
             </select>
             <div class="col d-flex justify-content-center">
-                <a href="{{ url_for('dashboard', user_id=user_id) }}" type="submit" class="btn btn-default">
+                <a href="{{ url_for('dashboard', user_id=user_id) }}" type="submit" class="btn btn-default custom-button">
                     Go Back
                 </a>
-                <button id="guest-details-confirm-button" name="guest-details-confirm-button" class="btn btn-info guest-details-button" type="submit">
+                <button id="guest-details-confirm-button" name="guest-details-confirm-button" class="btn btn-info custom-button" type="submit">
                     {% if add == True %} 
                         Add Guest
                     {% else %} 
