--- a/templates/components/modals/delete-guest.html
+++ b/templates/components/modals/delete-guest.html
@@ -11,10 +11,10 @@
         Are you sure you wish to permanently delete {{ guest.full_name }}? 
       </div>
       <div class="modal-footer">
-        <a href="#" type="submit" class="btn btn-default" data-dismiss="modal">
+        <a href="#" type="submit" class="btn btn-default custom-button" data-dismiss="modal">
           Go Back
         </a>
-        <a href="{{ url_for('delete_guest', user_id=user_id, guest_id=guest._id) }}" type="button" class="btn btn-danger">
+        <a href="{{ url_for('delete_guest', user_id=user_id, guest_id=guest._id) }}" type="button" class="btn btn-danger custom-button">
           Delete Guest
         </a>
       </div>
